--- a/MY PORTFOLIO/style.css
+++ b/MY PORTFOLIO/style.css
@@ -4,54 +4,197 @@
     margin: 0;
     box-sizing: border-box;
 }
-.bgsquares{
+/* .bgsquares{
     background: #f5f5f5;
     height: 100vh;
     width: 100%;
-    /* display: flex;
+    display: flex;
     justify-content: center;
-    align-items: center; */
-    overflow: hidden;
-    perspective: 1000px;
+    align-items: center; 
+     overflow: hidden;
+    perspective: 1000px; 
 
-}
+}  */
 .square{
-    height: 50px;
-    width: 50px;
-    border: 1px solid #000000;
-    background: #19054e;
     transition: 0.5s;
     position: relative;
     transform-style: preserve-3d;
     box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 50px;
+    height: 50px;
 
 
 }
 .squares{
     display: flex;
     flex-wrap: wrap;
-    background: linear-gradient(45deg, rgba(0,4,32,1) 0%, rgba(35,41,82,1) 100%);
-    transform:rotateX(30deg) rotateZ(15deg ) rotateY(-15deg)translateX(-100px) translateZ(400px) ;
+    /* background: linear-gradient(45deg, rgba(0,4,32,1) 0%, rgba(35,41,82,1) 100%); */
+    transform:rotateX(30deg) rotateZ(15deg) rotateY(-15deg)translateX(100px) translateZ(0) translateY(200px) ;
     transform-style: preserve-3d;
     width: calc(100vw + 100px);
     height: calc(100vh + 100px);
+    align-content: start;
 }
-.square:hover{
-    /* filter: drop-shadow(0px 0px 30px rgb(135, 206, 235));
-    animation: rainbow 10s linear infinite; */
+.square div{
+    position: absolute;
+    height: 50px;
+    width: 50px;
+}
+.front{
+    border: 1px solid #0015ff;
+    background: #ff0000;
+}
+.left{
+    transform-style: preserve-3d;
+    transform: rotateY(90deg) translateY(-1px);
+    transform-origin: left;
+    background: #00bbff;
+    border: 1px solid #ff00e6;
+}
+.right{
+    background: #00bbff;
+    transform: rotateY(-90deg) ;
+    box-sizing: border-box;
+    transform-origin: right;
+    transform-style: preserve-3d;
+    border: 1px solid #ff00e6;  
+}
+.bottom{
+    background: #09ff00;
+    transform: rotateX(90deg);
+    transform-style: preserve-3d;
+    transform-origin: bottom;
+    box-sizing: border-box;
+    border: 1px solid #13e3ff;
+}
+.top{
+    background: #09ff00;
+    transform: rotateX(-90deg);
+    transform-style: preserve-3d;
+    transform-origin: top;
+    box-sizing: border-box;
+    border: 1px solid #13e3ff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .square:hover{
+    filter: drop-shadow(0px 0px 30px rgb(135, 206, 235));
+    animation: rainbow 10s linear infinite;
     transform: translateZ(50px);
- }
- .square::before{
+ } */
+ /* .square::before{
     content: '';
     position: absolute;
     width: 50px;
     height: 50px;
     background: #000000;
     transform: rotateY(-90deg) ;
-    /* left: 50px; */
+     left: 50px;
     box-sizing: border-box;
     transform-origin: right;
     transform-style: preserve-3d;
@@ -81,15 +224,14 @@
      transform-origin: left;
      box-sizing: border-box;
      border: 1px solid #961818;
- }
+ }  */
 
 
-
-@keyframes rainbow{
+/* @keyframes rainbow{
     0%{
         filter: hue-rotate(0);
     }
     100%{
         filter: hue-rotate(360deg);
     }
-}
+} */
